--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 /* ### Neutral */
 
 --white: hsl(0, 0%, 100%);/* (text) */
---grayish-blue: hsl(240, 2%, 79%);/* (footer text) */
+--grayish-blue: #c8c8cb;/* (footer text) */
 --very-dark-grayish-blue: hsl(207, 13%, 34%);/* (body copy) */
 --very-dark-black-blue: hsl(240, 10%, 16%);/* (footer background) */
 
@@ -210,6 +210,7 @@ hr{
     border-radius: 0 0 0 100px / 0 0 0 100px;
     position: relative;
     overflow: hidden;
+    margin-bottom: 4rem;
 }
 .intro__container{
     display: flex;
@@ -276,4 +277,138 @@ hr{
     left: -100px;
     rotate: 110deg;
     z-index: 5;
+}
+
+/* Design Section */
+
+.design {
+    margin-bottom: 18rem;
+}
+.design__container,
+.laptop__container{
+    text-align: center;
+    margin-inline: 1.5rem
+}
+.design__image-wrapper,
+.laptop__image-wrapper {
+    margin-bottom: 2rem;
+}
+.design__image,
+.laptop__image{
+    width: 100%;
+}
+.design__text-wrapper,
+.laptop__text-wrapper{
+    display: flex;
+    flex-flow: column;
+    gap: 2rem;
+}
+.design__heading,
+.laptop__heading{
+    font-size: 1.8rem;
+    font-weight: 400;
+    margin-bottom: 3rem;
+}
+.design__card-title,
+.laptop__card-title{
+    font-size: 1.8rem;
+    font-weight: 400;
+    margin-bottom: 1.5rem;
+}
+.design__card-text,
+.laptop__card-text{
+    font-weight: 100;
+    line-height: 1.8rem;
+}
+
+/* Infrastructure Section */
+.infra{
+    position: relative;
+    color: var(--white);
+    margin-bottom: 3rem;
+}
+.infra__image{
+    width: 100%;
+    margin-bottom: -150px;
+    z-index: 1600;
+    position: absolute;
+    top: -30%;
+}
+.infra__text-wrapper{
+    background-color: var(--very-dark-desaturated-blue);
+    border-radius: 0 100px 0 100px;
+    height: 80vh;
+    overflow: hidden;
+    position: relative;
+    z-index: 800;
+    display: grid;
+    place-items: center;
+    align-content: center;
+    gap: 2rem;
+    text-align: center;
+}
+.infra__heading{
+    font-size: 1.8rem;
+    font-weight: 500;
+    z-index: 60;
+    padding-top: 8rem;
+}
+.infra__text{
+    margin: 0 1rem;
+    font-weight: 100;
+    line-height: 1.8rem;
+}
+.infra__text-image{
+    position: absolute;
+    width: 100%;
+    top: -20%;
+    z-index: 30;
+}
+.infra__text-image-circle {
+    position: absolute;
+    top: -200px;
+    left: 50%;
+    margin-left: -300px;
+    width: 600px;
+    z-index: 2000;
+}
+/* Laptop */
+.laptop {
+    margin-bottom: 3rem;
+}
+.footer {
+    background-color: var(--very-dark-black-blue);
+    border-radius: 0 100px 0 0;
+}
+.footer__container{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    gap: 1rem;
+    text-align: center;
+    padding-block: 3rem;
+}
+.footer_column{
+    margin-bottom: 1rem;
+}
+.footer__nav-list{
+    display: flex;
+    flex-flow: column;
+    gap: 1rem;
+}
+.footer__nav-title{
+    color: var(--white);
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+.footer__link{
+    text-decoration: none;
+    color: var(--grayish-blue);
+}
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+@media screen and (min-width: 570px) {
+    
 }
