--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 /* ## Colors */
 
 /* ### Primary */
---light-red: hsl(356, 100%, 66%);/* (CTA text) */
---very-light-red: hsl(355, 100%, 74%);/* (CTA hover background) */
+--light-red: #ff525d;/* (CTA text) */
+--very-light-red: #ff7a85;/* (CTA hover background) */
 --very-dark-blue: hsl(208, 49%, 24%);/* (headings) */
 
 /* ### Neutral */
@@ -49,6 +49,7 @@ body{
 ul{
     list-style: none;
 }
+
 /* Primary Navigation */
 .prim-nav{
     padding-top: 2rem;
@@ -57,6 +58,7 @@ ul{
     z-index: 50;
     position: fixed;
     width: 100%;
+    z-index: 800;
 }
 .prim-nav__nav {
     display: flex;
@@ -198,17 +200,29 @@ hr{
 .button--gradient {
     background: var(--gradient-intro);
 }
-
-@media screen and (min-width: 570px) {
+.signup__button:hover,
+.login__button:hover{
+    background: rgba(255, 255, 255, 0.5);
+}
+.show--on-desktop{
+    display: none;
+}
+@media screen and (min-width: 768px) {
+    .hide--on-desktop{
+        display: none;
+    }
+    .show--on-desktop{
+        display: block;
+    }
     .prim-nav__nav-toggle{
         display: none;
     }
     .prim-nav__nav{
-        margin-inline: auto;
         max-width: var(--max-width);
+        margin-inline: 1rem;
     }
     .prim-nav__logo-container{
-        margin-right: 3rem;
+        margin-right: clamp(1rem, 4vw, 3rem);
     }
     .prim-nav__menu{
         all: unset;
@@ -267,15 +281,30 @@ hr{
     .prim-nav__button-container a{
         color: var(--white);
     }
-    .signup__button:hover,
-    .login__button:hover{
-        background: rgba(255, 255, 255, 0.5);
-    }
+    
     
 }
+@media screen and (min-width: 1024px){
+    .prim-nav__nav{
+        margin-inline: auto;
+        max-width: var(--max-width);
+        padding-inline: 1rem;
+    }
+}
 
-
-
+.output {
+    color: black;
+    z-index: 4000;
+    min-height: 100px;
+}
+#height{
+    font-size: 3rem;
+    color: black;
+}
+#scrollPosition{
+    font-size: 3rem;
+    color: black;
+}
 /* Intro */
 .intro{
     color: var(--white);
@@ -317,24 +346,31 @@ hr{
     column-gap: 1rem;
     z-index: 10;
 }
+.intro__start-button:hover{
+    color: var(--white);
+    background: rgba(255, 255, 255, 0.4);
+    border: 2px solid transparent;
+}
+.intro__lm-button:hover{
+    color: var(--light-red);
+    background: var(--white);
+    border: 2px solid transparent;
+}
 /* Intro */
-@media screen and (min-width: 570px)  {
-    /* Buttons */
+@media screen and (min-width: 768px)  {
     .intro{
         margin-bottom: 0;
     }
-    .intro__start-button:hover{
-        color: var(--white);
-        background: rgba(255, 255, 255, 0.4);
-        border: 2px solid transparent;
-    }
-    .intro__lm-button:hover{
-        color: var(--light-red);
-        background: var(--white);
-        border: 2px solid transparent;
+    .intro__bg-image{
+        width: 250%;
+        z-index: 0;
+        position: absolute;
+        top: -50%;
+        left: -19%;
+        rotate: 25deg;
     }
 }
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 767px) {
     .intro__bg-image{
         position: absolute;
         inset: 0;
@@ -352,6 +388,9 @@ hr{
         background-size: contain;
     }
     .design__image {
+        display: none;
+    }
+    .laptop__image-desktop{
         display: none;
     }
 }
@@ -400,7 +439,7 @@ hr{
     margin-bottom: 2rem;
 }
 .design__image,
-.laptop__image{
+.laptop__image-mobile{
     width: 100%;
 }
 .design__text-wrapper,
@@ -420,6 +459,7 @@ hr{
     font-size: 1.8rem;
     font-weight: 400;
     margin-bottom: 1.5rem;
+    color: var(--very-dark-blue);
 }
 .design__card-text,
 .laptop__card-text{
@@ -537,7 +577,6 @@ main{
         align-items: center;
         justify-content: center;
         gap: 1rem;
-        outline: 2px solid red;
         max-width: var(--max-width);
     }
     .infra__image-wrapper{
@@ -562,7 +601,6 @@ main{
         aspect-ratio: 1/1;
         width: 100%;
         color: var(--white);
-        outline: 2px solid red;
         text-align: left;
     }
     .infra__heading{
@@ -592,6 +630,63 @@ main{
     gap: 1rem;
     text-align: center;
     padding-block: 3rem;
+}
+@media screen and (min-width: 768px){
+    .laptop{
+        margin-top: 9rem;
+        max-width: 1440px;
+        position: relative;
+    }
+    .laptop__container{
+        display: grid;
+        place-items: center;
+    }
+    .laptop__content-container{
+        display: flex;
+        flex-flow: row;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        align-items: center;
+        text-align: left;
+        max-width: var(--max-width);
+        min-height: 700px;
+    }
+    .laptop__image-wrapper{
+        flex: 1;
+        aspect-ratio: 1/1;
+        width: 100%;
+        min-width: 320px;
+    }
+    .laptop__image-mobile{
+        display: none;
+    }
+    .laptop__image-desktop{
+        position: absolute;
+        inset: 0;
+        top: -20%;
+        left: -20%;
+        width: 70%;
+        margin-block: auto;
+    }
+    .laptop__text-wrapper{
+        flex: 1;
+        aspect-ratio: 1/1;
+        width: 100%;
+        min-width: 200px;
+    }
+}
+@media screen and (max-width: 767px){
+    .laptop__content-container{
+        display: flex;
+        flex-flow: column;
+        justify-content: flex-start;
+        align-items: center;
+        text-align: center;
+        max-width: var(--max-width);
+    }
+    .laptop__image-desktop{
+        display: none;
+    }
 }
 .footer_column{
     margin-bottom: 1rem;
